Add validation of page size